--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:exported="false" />
         <activity
-            android:name=".additionalSettings.DownloadsArray.list.DownlodPagger"
+            android:name=".additionalSettings.DownlodPagger"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:exported="false" />
         <activity
@@ -146,30 +146,28 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
+<!--                <data
                     android:host="@string/deeplink_url"
                     android:scheme="https"
                     tools:ignore="AppLinkUrlError" />
                 <data
                     android:host="@string/deeplink_url"
                     android:scheme="http"
-                    tools:ignore="AppLinkUrlError" />
+                    tools:ignore="AppLinkUrlError" />-->
+
+
+                <data android:scheme="https"/>
+                <data android:host="@string/deeplink_url"/>
+
+                <data android:scheme="http"/>
+                <data android:host="@string/deeplink_url"/>
+
+
+
             </intent-filter>
 
         </activity>
 
-<!--        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-
-            &lt;!&ndash; ressource file to create &ndash;&gt;
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
-        </provider>
-        -->
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -194,7 +192,7 @@
             android:exported="false" />
 
         <receiver
-            android:name=".additionalSettings.DownloadsArray.devicelock.MyDeviceAdminReceiver"
+            android:name=".additionalSettings.devicelock.MyDeviceAdminReceiver"
             android:description="@string/app_name"
             android:exported="true"
             android:label="@string/app_name"
