March 21 - Modified Download Page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -212,7 +212,7 @@
         </receiver>
 
         <service
-            android:name=".additionalSettings.myService.NotificationService"
+            android:name=".additionalSettings.myService.SyncInterval"
             android:directBootAware="true"
             android:exported="false" />
         <service
