--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="sync2app.com.syncapplive">
+    package="sync2app.com.syncapplive" >
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -48,9 +48,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RemoteWebViewLight"
         android:usesCleartextTraffic="true"
-        tools:ignore="AllowBackup,UnusedAttribute">
+        tools:ignore="AllowBackup,UnusedAttribute" >
         <activity
-            android:name=".additionalSettings.MyTestDownloadAPI"
+            android:name=".additionalSettings.WebbyTestActivity"
+            android:exported="false" />
+        <activity
+            android:name=".additionalSettings.DownloadTheApisActivity"
+            android:exported="false" />
+        <activity
+            android:name=".additionalSettings.myCompleteDownload.SyncPage"
             android:exported="false" />
         <activity
             android:name=".QrPages.PhoneActivity"
@@ -87,7 +93,6 @@
             android:name=".additionalSettings.RequiredBioActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:exported="false" />
-
         <activity
             android:name=".additionalSettings.SystemInfoActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
@@ -131,9 +136,12 @@
             android:theme="@style/Theme.RemoteWebViewSettings" />
         <activity android:name=".WelcomeSlider" />
         <activity
+            android:name=".additionalSettings.MyTestDownloadAPI"
+            android:exported="false" />
+        <activity
             android:name=".additionalSettings.TvActivityOrAppMode"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -149,7 +157,7 @@
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize"
-            tools:ignore="AppLinkUrlError">
+            tools:ignore="AppLinkUrlError" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -178,7 +186,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
@@ -187,7 +195,7 @@
         <service
             android:name=".MyFirebaseMessaging"
             android:enabled="true"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
@@ -201,7 +209,7 @@
             android:description="@string/app_name"
             android:exported="true"
             android:label="@string/app_name"
-            android:permission="android.permission.BIND_DEVICE_ADMIN">
+            android:permission="android.permission.BIND_DEVICE_ADMIN" >
             <meta-data
                 android:name="android.app.device_admin"
                 android:resource="@xml/device_admin_receiver" />
@@ -219,12 +227,16 @@
             android:name=".additionalSettings.myService.OnChnageService"
             android:directBootAware="true"
             android:exported="false" />
+        <service
+            android:name=".additionalSettings.myService.MyApiService"
+            android:enabled="true"
+            android:exported="true" />
 
         <receiver
             android:name=".additionalSettings.myService.RestarterBootReceiver"
             android:directBootAware="true"
             android:enabled="true"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
                 <action android:name="RestarterBootReceiver" />
             </intent-filter>
