April 18 - Api Download Page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,7 +144,17 @@ dependencies {
 
 
     // save files on papper book Db
-    implementation 'io.github.pilgr:paperdb:2.7.2'
+  ///  implementation 'io.github.pilgr:paperdb:2.7.2'
+
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+
+
+
 
 
 }
