--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,6 +154,18 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
 
+    // for circular image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+
+    // for exoplayer
+  //  implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
+
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.19.1'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.19.1'
+
+
+
 
 
 
